Fix styling. Page wraps correctly

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,13 +49,15 @@ html {
 .home-container {
     margin-top: 1in;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap-reverse;
     justify-content: space-evenly;
 }
 
 .home-child-text {
-    flex-basis: 60%;
+    flex-basis: 40vw;
+    flex-grow: 1;
 }
-
 
 /*
 * Styling for paragraph of home-child div
@@ -68,10 +70,10 @@ html {
 }
 
 /*
-* Styling for img of home-child div
+* Styling for img of home-child-image div
 */
 .home-child-image img {
-    border-radius: 200px;
+    border-radius: 50%;
 }
 
 .section-header {
@@ -84,6 +86,7 @@ html {
     margin-top: 2in;
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 
@@ -135,13 +138,24 @@ html {
 .about-container {
     margin-top: 1in;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .about-container-child {
     margin: 1% 5% 1%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.about-container-child-reverse {
+    margin: 1% 5% 1%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap-reverse;
+    justify-content: center;
 }
 
 .about-container-text { 
@@ -149,7 +163,10 @@ html {
     padding: 40px;
     font-size: 20px;
     font-weight: lighter;
-    
+
+    flex-basis: 40vw;
+    flex-grow: 1;
+
 } 
 
 
